--- a/README
+++ b/README
@@ -24,11 +24,12 @@ To make sure check your /etc/asterisk/asterisk.conf file
 -----
 Usage
 -----
-agi(picotts.agi,"text",[language],[intkey],[speed]): This will invoke the Pico TTS
+agi(picotts.agi,"text",[language],[intkey],[speed],[return_variable]): This will invoke the Pico TTS
 engine, render the text string to speech and play it back to the user.
 If 'intkey' is set the script will wait for user input. Any given interrupt keys will
 cause the playback to immediately terminate and the dialplan to proceed to the
 matching extension (this is mainly for use in IVR, see README for examples).
+If 'return_variable' is set the script return into the variable name passed the file.
 
 The script invokes PicoSpeaker in order to get the voice data,
 which then stores in a local cache (by default /tmp/) for future use.
